@@ -1,3 +1,7 @@
+2004-07-20 Alain Magloire
+	Fix for PR 70449
+	* src/org/eclipse/cdt/core/internal/filetype/ResolverModel.java
+
 2004-07-19 Vladimir Hirsl
 
 	Implementation of HP-UX SOM binary parser.
